--- a/footballanalytics/.project
+++ b/footballanalytics/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>harrykane200million</name>
+	<name>kane200million</name>
 	<comment></comment>
 	<projects>
 	</projects>
